--- a/package.xml
+++ b/package.xml
@@ -41,7 +41,10 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>roscpp_serialization</build_depend>
+  
   <run_depend>roscpp</run_depend>
+  <run_depend>roscpp_serialization</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
