add author Yi Xiaodong

--- a/package.xml
+++ b/package.xml
@@ -25,7 +25,8 @@
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
   <!-- Authors do not have to be maintianers, but could be -->
   <!-- Example: -->
-  <author email="sukha19880831@gmail.com">sukha</author>
+  <author email="sukha19880831@gmail.com">Jiang Zaile</author>
+  <author email="xdong_yi@163.com">Yi Xiaodong</author>
 
 
   <!-- The *_depend tags are used to specify dependencies -->
