--- a/package.xml
+++ b/package.xml
@@ -44,10 +44,13 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>roscpp_serialization</build_depend>
+  <build_depend version_gte="0.3.17">roscpp_traits</build_depend>
+  <build_depend>xmlrpcpp</build_depend>
   
   <run_depend>roscpp</run_depend>
   <run_depend>roscpp_serialization</run_depend>
-
+  <run_depend version_gte="0.3.17">roscpp_traits</run_depend>
+  <run_depend>xmlrpcpp</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
